# Algorithm-visualization

./: CMakeLists.txt  README.md  clinklist.cpp  clinklist.h  clinklist.ui  detailpage.h  dlinklist.cpp  dlinklist.h  dlinklist.ui  dlnode.cpp  dlnode.h  graphpage.cpp  graphpage.h  graphview.cpp  graphview.h  img3.qrc  index_mainwindow.cpp  index_mainwindow.h  linklist.cpp  linklist.h  linklist.pro  linklist.pro.user.txt  linklist.ui  list_mainwindow.cpp  listpage.h  lnode.cpp  lnode.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myarrowitem.cpp  myarrowitem.h  mybutton.cpp  mydialog.cpp  myfunctioncallstack.cpp  myfunctioncallstack.h  mystack.cpp  mystack.h  res.qrc  (+18 more)
Desktop/index+wy/: CMakeLists.txt  clinklist.cpp  clinklist.h  detailpage.cpp  dlinklist.cpp  img2.qrc  index_mainwindow.cpp  index_mainwindow.h  index_mainwindow.ui  listpage.cpp  myarrowitem.h  mybutton.h  slidepage.h
Desktop/qt/build-index-Qt_6_5_3_for_macOS-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
Desktop/qt/build-index-Qt_6_5_3_for_macOS-Debug/.qt/: QtDeploySupport.cmake
Desktop/qt/build-index-Qt_6_5_3_for_macOS-Debug/index_autogen/: mocs_compilation.cpp
Desktop/qt/index/: CMakeLists.txt  clinklist.cpp  detailpage.cpp  detailpage.h  dlinklist.cpp  dlinklist.h  index_img.qrc  index_mainwindow.cpp  index_mainwindow.ui  linklist.cpp  linklist.h  list.qrc  list_mainwindow.cpp  list_mainwindow.h  listpage.cpp  listpage.h  lnode.h  main.cpp  sonwindow.cpp  sonwindow.h  uidefine.cpp
build-index+wy-Desktop_Qt_6_5_0_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-index+wy-Desktop_Qt_6_5_0_MSVC2019_64bit-Debug/.qt/: QtDeploySupport.cmake
build-index+wy-Desktop_Qt_6_5_0_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
build-index+wy-Desktop_Qt_6_5_0_MSVC2019_64bit-Debug/index_autogen/: deps  mocs_compilation.cpp
build-index+wy-Desktop_Qt_6_5_0_MSVC2019_64bit-Debug/index_autogen/EWIEGA46WW/: moc_detailpage.cpp  moc_detailpage.cpp.d  moc_index_mainwindow.cpp  moc_index_mainwindow.cpp.d  moc_mybutton.cpp  moc_mybutton.cpp.d  moc_mydialog.cpp  moc_mydialog.cpp.d  moc_myvec_widget.cpp  moc_myvec_widget.cpp.d  moc_slidepage.cpp  moc_slidepage.cpp.d  moc_sonwindow.cpp  moc_sonwindow.cpp.d  moc_wy_vector.cpp  moc_wy_vector.cpp.d  qrc_index_img.cpp
build-index+wy-Desktop_Qt_6_5_0_MSVC2019_64bit-Debug/index_autogen/include/: ui_index_mainwindow.h  ui_sonwindow.h
index+wy/: CMakeLists.txt  detailpage.cpp  graphview.cpp  graphview.h  index_mainwindow.cpp  index_mainwindow.h  main.cpp  mybutton.cpp  mydialog.h  myvec_widget.ui  sonwindow.cpp  sonwindow.ui  wy_vector.h
(+477 files in other folders)
